--- a/sciml-2023/sciml2023.tex
+++ b/sciml-2023/sciml2023.tex
@@ -256,11 +256,12 @@ discretization time $\epsilon > 0$
     \item \myemph{Neck}: step size too big, \myemph{Hamiltonian diverges} and we \myemph{reject}.
     \item \myemph{Mouth}: step size too small, \myemph{diffusion too slow}.
       explore.
+    \item Result is \myemph{biased estimation} of quantities of interest.
     \end{subitemize}
   \item Vertical dashed lines show the left truncation (color = step size)
 \end{itemize}
 \begin{center}
-  \includegraphics[width=2in]{img/hmc-rejections.png}
+  \includegraphics[width=1.75in]{img/hmc-rejections.png}
 \end{center}
 
 \sld{Dramatis Personae}
