--- a/sciml-2023/sciml2023.tex
+++ b/sciml-2023/sciml2023.tex
@@ -314,7 +314,7 @@ discretization time $\epsilon > 0$
   \end{subitemize}
 \end{itemize}
 
-\sld{Non-uniform acceptance fixes GHMC (Neal 2020)}
+\sld{Non-uniform acceptance fixes G-HMC (Neal 2020)}
 \begin{itemize}
 \item Neal (2020) replaced the i.i.d.\ $\draw{u}{m} \sim \textrm{uniform}(0, 1)$
   variate in Metropolis,
@@ -336,29 +336,32 @@ discretization time $\epsilon > 0$
   \sigma^{\textrm{jitter}} \in (0, \infty)$.
 \end{itemize}
 
-\sld{Neal's evaluation of non-reversible $u$}
+\sld{Neal's evaluation of non-reversible $u$ for G-HMC}
 \begin{subitemize}
   \vspace*{-3pt}
+  \item for Bayesian neural network, 1.25 times \myemph{faster than
+      HMC}!
+    \vspace*{-4pt}
   \item 16 pairs of normal variables with unit variance and 0.99
-    correlation, $\alpha$ color coded
+    correlation, $\alpha$ color coded:
   \end{subitemize}
 \begin{center}
   \vspace*{-3pt}
-  \includegraphics[width=0.65\textwidth]{img/neal-nonrevu.pdf}
+  \includegraphics[width=0.6\textwidth]{img/neal-nonrevu.pdf}
  \qquad {\footnotesize (Neal 2020)}
 \end{center}
 
-\sld{HMC has problems with half-orbits}
+\sld{HMC sensitive to integration time \normalsize (steps $\times$ num steps)}
 \begin{center}
   \vspace*{-4pt}
   \includegraphics[width=2.5in]{img/hmc-harmonics.png}
 \end{center}
 \begin{subitemize}
   \vspace*{-8pt}
-\item Standard normal, 1000 dimensions; vertical axis
-  ESS; horizontal axis step size ($\epsilon$); columns (4,
-  16, 64) steps ($L$);
-  top row HMC, bottom row steps-jittered HMC;
+\item Standard normal, \myemph{1000 dimensions};
+  vertical axis ESS (log scale); horizontal axis step size
+  ($\epsilon$); columns (4, 16, 64) steps ($L$);
+  top row HMC, bottom row uniformly steps-jittered HMC;
   blue mean estimate, red variance; dashed line is NUTS (Stan)
 \end{subitemize}
 
