--- a/word2vec2023/word2vec.tex
+++ b/word2vec2023/word2vec.tex
@@ -180,10 +180,13 @@
 
 \sld{23 Skidoo (i.e., nothing to see, move along)}
 \begin{itemize}
-\item Word2Vec \myemph{Superseded} by jointly optimized transformer embeddings 
+\item Word2Vec \myemph{superseded} by jointly optimized
+  \myemph{transformer embeddings}.
 \end{itemize}
 \begin{center}
-\includegraphics[width=2.5in]{img/word2vec.png}
+  \includegraphics[width=2.5in]{img/word2vec.png}
+  \quad
+  \includegraphics[width=1.35in]{img/23-skidoo-flatiron.jpg}
 \end{center}
 
 \end{document}
