--- a/fwam2020/fwam2020.tex
+++ b/fwam2020/fwam2020.tex
@@ -19,7 +19,7 @@
 \spc{\small Flatiron Institute}
 \vfill 
 \noindent 
-\spc{\footnotesize October 2021}
+\spc{\footnotesize March 2024}
 \hfill 
 {\footnotesize \url{https://mc-stan.org}}
 \hfill 
@@ -112,7 +112,7 @@ evidence}.
 \end{itemize}
 
 
-\sld{Simulate some Baseball (or clinical trials)}
+\sld{Simulate some Baseball (clinical trials)}
 %
 \begin{itemize}
 \item True .300 on base percentage (OBP) then simulate
